--- a/jpf_styles.css
+++ b/jpf_styles.css
@@ -6,6 +6,8 @@
    Tutorial 6
    Case Problem 2
 
+   Dominic DiModugno
+   
    The Japanese Puzzle Factory General Style Sheet
   
    Filename:         jpf_styles.css
